<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:layout_width="394dp"
        android:layout_height="239dp"
        android:layout_marginStart="56dp"
        android:layout_marginLeft="56dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/horizontalScrollView">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/nombre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nombreL"
                android:textColor="@color/colorAccent"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/precio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/coverL"
                android:textColor="@color/colorAccent"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/ambiente"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/AmbienteL"
                android:textColor="@color/colorAccent"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/edad"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/EdadL"
                android:textColor="@color/colorAccent"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/beneficios"
                android:layout_width="362dp"
                android:layout_height="191dp"
                android:text="@string/beneficiosL"
                android:textColor="@color/colorAccent"
                android:textSize="24sp"
                android:textStyle="bold" />

        </LinearLayout>
    </ScrollView>

    <HorizontalScrollView
        android:id="@+id/horizontalScrollView"
        android:layout_width="348dp"
        android:layout_height="291dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">



            <ImageView
                android:id="@+id/imageView"
                android:layout_width="300dp"
                android:layout_height="300dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/scinco" />

            <ImageView
                android:id="@+id/imageView9"
                android:layout_width="300dp"
                android:layout_height="300dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/suno" />

            <ImageView
                android:id="@+id/imageView8"
                android:layout_width="300dp"
                android:layout_height="300dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/sdos" />

            <ImageView
                android:id="@+id/imageView6"
                android:layout_width="300dp"
                android:layout_height="300dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/stres" />

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="300dp"
                android:layout_height="300dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/scuatro" />
        </LinearLayout>
    </HorizontalScrollView>
</android.support.constraint.ConstraintLayout>