<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:id="@+id/scroll"
        android:layout_width="394dp"
        android:layout_height="239dp"
        android:layout_marginStart="56dp"
        android:layout_marginLeft="56dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.595"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/horizontalScrollView2"
        app:layout_constraintVertical_bias="1.0">

    </ScrollView>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/horizontalScrollView2">

        <TextView
            android:id="@+id/nombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nombreA"
            android:textColor="@color/colorAccent"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/precio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/coverA"
            android:textColor="@color/colorAccent"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/ambiente"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/AmbienteA"
            android:textColor="@color/colorAccent"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/edad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/EdadA"
            android:textColor="@color/colorAccent"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/beneficios"
            android:layout_width="362dp"
            android:layout_height="191dp"
            android:text="@string/beneficiosA"
            android:textColor="@color/colorAccent"
            android:textSize="24sp"
            android:textStyle="bold" />

    </LinearLayout>

    <HorizontalScrollView
        android:id="@+id/horizontalScrollView2"
        android:layout_width="348dp"
        android:layout_height="291dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView10"
                android:layout_width="300dp"
                android:layout_height="300dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/auno" />

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="300dp"
                android:layout_height="300dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/ados" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="300dp"
                android:layout_height="300dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/atres" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="300dp"
                android:layout_height="300dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/acuatro" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="300dp"
                android:layout_height="300dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/acinco" />


        </LinearLayout>
    </HorizontalScrollView>
</android.support.constraint.ConstraintLayout>