<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent"
    tools:context=".Reservas">

    <ScrollView
        android:id="@+id/scrollView3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/layout_vertical"
        android:layout_width="379dp"
        android:layout_height="578dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.483"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.705">

        <EditText
            android:id="@+id/et_nombreR"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:ems="10"
            android:hint="@string/et_nombreR"
            android:inputType="textPersonName"
            android:shadowColor="#000000"
            android:shadowRadius="1"
            android:textColor="@android:color/black"
            android:textColorHighlight="@android:color/holo_red_light"
            android:textColorHint="@android:color/black"
            android:textColorLink="@android:color/holo_red_light"
            android:textCursorDrawable="@android:color/holo_red_light" />


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="77dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_fechaR"
                android:layout_width="78dp"
                android:layout_height="78dp"
                android:layout_weight="1"
                android:background="@drawable/calendar" />

            <EditText
                android:id="@+id/et_fechaR"
                android:layout_width="301dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:ems="10"
                android:hint="@string/et_fechaR"
                android:inputType="date"
                android:shadowColor="#000000"
                android:shadowRadius="1"
                android:textColorHint="@android:color/black" />
        </LinearLayout>

        <Spinner
            android:id="@+id/sp_baresR"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_marginBottom="10dp" />

        <LinearLayout
            android:id="@+id/layout_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/et_personasR"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/et_personasR"
                android:inputType="number"
                android:shadowColor="#000000"
                android:shadowRadius="1"
                android:textColorHint="@android:color/black" />

            <EditText
                android:id="@+id/et_cortesiasR"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/et_cortesiasR"
                android:inputType="number"
                android:shadowColor="#000000"
                android:shadowRadius="1"
                android:textColorHint="@android:color/black" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_listaR"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:shadowColor="#000000"
            android:shadowRadius="1"
            android:text="@string/tv_listaR"
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/black" />

        <EditText
            android:id="@+id/et_listaR"
            android:layout_width="match_parent"
            android:layout_height="170dp"
            android:layout_marginBottom="10dp"
            android:ems="10"
            android:hint="@string/et_listaR"
            android:inputType="textMultiLine"
            android:shadowColor="#000000"
            android:shadowRadius="1"
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/black" />

        <Spinner
            android:id="@+id/sp_promotoresR"
            android:layout_width="match_parent"
            android:layout_height="56dp" />

        <Button
            android:id="@+id/btn_reservarR"
            android:layout_width="286dp"
            android:layout_height="61dp"
            android:layout_marginLeft="45dp"
            android:background="@drawable/res"
            android:onClick="btn_reservas2"
            android:shadowRadius="1" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>